<resources>
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="desc" translatable="false">Desc</string>

    <!-- opcions -->
    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>
    <string name="action_refresh" translatable="false">Refresh</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- opcio localitzacio -->
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">08272</string>
    <string name="pref_days_default" translatable="false">7</string>

    <!-- opcio unitats -->
    <string-array name="pref_units_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string-array name="pref_units_options">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>

    <!-- opcio dies -->
    <string-array name="pref_days_values">
        <item>7</item>
        <item>15</item>
    </string-array>
    <string-array name="pref_days_options">
        <item>7</item>
        <item>15</item>
    </string-array>
    <string name="pref_days_label">Número de dies</string>
    <string name="pref_days_key">days</string>
    <string name="pref_days_7">7</string>
    <string name="pref_days_15">15</string>

</resources>
